--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
   <center>
   <h1>Project is active!!</h1>
-  <a href="{% url 'dashboard' %}">go to parking</a>
+  <a href="{% url 'register' %}">go to parking</a>
   </center>
 </body>
 </html>
