--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <center>
-  <h1>Project is active!!</h1>
+  <h1>Project is LIVE!!</h1>
   <a href="{% url 'register' %}">go to parking</a>
   </center>
 </body>
